# scottish-budget-2026-2027

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  test_weight_method_simple.py
.beads/: issues.jsonl
.github/workflows/: generate-data.yml  test.yml
public/data/: budgetary_impact.csv  constituencies.json  constituency.csv  distributional_impact.csv  living-standards.json  local_authorities.csv  mansion_tax_constituency_impact.csv  metrics.csv  poverty.json  scotland_local_authorities_2021.geojson  sfc_comparison.csv  two_child_limit_validation.csv  winners_losers.csv
scotland-mansion-tax/: README.md  analyze_scottish_parliament_constituencies.py  create_scottish_d3_map.py  create_scottish_parliament_map.py  pyproject.toml
scotland-mansion-tax/src/scotland_mansion_tax/: analysis.py  visualization.py
scripts/: generate_threshold_projections.py
src/: App.css  App.jsx  index.css
src/components/: BaselineScotlandTab.jsx  BudgetBarChart.jsx  Dashboard.css  Dashboard.jsx  DecileChart.css  DecileChart.jsx  HouseholdCalculator.css  HouseholdCalculator.jsx  LocalAreaSection.css  LocalAreaSection.jsx  MansionTaxMap.css  MansionTaxMap.jsx  PovertyImpactTable.jsx  SFCComparisonTable.css  SFCComparisonTable.jsx  ScotlandMap.css  ScotlandMap.jsx  StackedBudgetBarChart.jsx  StackedDecileChart.jsx  ValidationTab.jsx
src/scottish_budget_data/: __init__.py  api.py  calculators.py  cli.py  modal_app.py  pipeline.py  reforms.py
src/utils/: exportMapAsSvg.js  policyConfig.js  reformConfig.js
tests/: test_data_validation.py  test_reforms.py
