[project]
name = "scottish-budget-2026-2027"
version = "0.1.0"
description = "Scottish Budget 2026-27 impact dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "policyengine-uk>=2.68.0",  # Required for SCP baby bonus reform
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "h5py>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
scottish-budget-data = "scottish_budget_data.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
