[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scotland-mansion-tax"
version = "0.1.0"
description = "Analysis of Scotland's proposed council tax reform for £1m+ properties"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"}
]
keywords = ["scotland", "mansion-tax", "council-tax", "policy-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "click>=8.0.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
export = [
    "kaleido>=0.2.0",  # For PNG export from plotly
]

[project.scripts]
scotland-mansion-tax = "scotland_mansion_tax.cli:main"

[project.urls]
Homepage = "https://github.com/PolicyEngine/scotland-mansion-tax"
Documentation = "https://policyengine.github.io/scotland-mansion-tax"
Repository = "https://github.com/PolicyEngine/scotland-mansion-tax"
Issues = "https://github.com/PolicyEngine/scotland-mansion-tax/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scotland_mansion_tax = ["data/*.csv", "data/*.geojson"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long - handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
